Адаптивная верстка для index.html

--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -29,3 +29,19 @@
     margin: 5px 0 40px 0;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .contact {
+    width: 280px;
+    margin: 5px 0 40px 0;
+
+    &--email{
+      order: 3;
+    }
+  }
+
+  .contact__title {
+    margin-bottom: 20px;
+  }
+}
+
