--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -7,6 +7,8 @@
   font-size: 18px;
   line-height: 30px;
   font-weight: bold;
+
+  margin-bottom: 0;
 }
 
 .review__text {
@@ -70,7 +72,7 @@
   }
 
   .review__author {
-    margin-top: 20px;
+    margin-top: 15px;
 
     font-weight: bold;
     font-size: 24px;
