--- a/source/less/blocks/reviews-slider.less
+++ b/source/less/blocks/reviews-slider.less
@@ -66,12 +66,16 @@
 }
 
 @media (min-width: @tablet-width) {
-  .reviews-slider {
-    margin-bottom: 0;
+  .reviews-slider__item {
+    margin-bottom: 32px;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .reviews-slider {
+    margin-bottom: 0;
+  }
+
   .reviews-slider__list {
     position: relative;
     padding-top: 150px;
