--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,5 +1,7 @@
 .map {
   position: relative;
+
+  overflow: hidden;
 }
 
 .map__img {
@@ -7,13 +9,17 @@
   height: 100%;
   background-color: @bg-lightgrey;
   background-image: url("../img/bg-map-mobile@1x.png");
-  .background(50%, 100%, cover);
+  .background(50%, 75%, cover);
 }
 
 @media (min-width: @tablet-width) {
-  background-image: url("../img/bg-map-tablet@1x.jpg");
+  .map__img {
+    background-image: url("../img/bg-map-tablet@1x.jpg");
+  }
 }
 
 @media (min-width: @desktop-width) {
-  background-image: url("../img/bg-map-desktop@1x.jpg");
+  .map__img {
+    background-image: url("../img/bg-map-desktop@1x.jpg");
+  }
 }
