--- a/source/less/mixin.less
+++ b/source/less/mixin.less
@@ -1,7 +1,7 @@
-.list-reset() {
+.list-reset(@margin: 0, @padding: 0) {
   list-style: none;
-  margin: 0;
-  padding: 0;
+  margin: @margin;
+  padding: @padding;
 }
 
 .link-reset() {
