Промежуточный результат адаптивной верстки

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -47,7 +47,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   .contacts__title {
@@ -75,6 +75,10 @@
     margin-top: 60px;
     margin-bottom: 50px;
     padding: 0 200px;
+  }
+
+  .contacts__info {
+    justify-content: space-between;
   }
 
   .contacts__map {
