--- a/source/less/blocks/likes.less
+++ b/source/less/blocks/likes.less
@@ -24,3 +24,15 @@
   margin: 0;
   padding-left: 30px;
 }
+
+@media (min-width: @tablet-width) {
+  .likes__counts {
+    padding-left: 0;
+    padding-right: 35px;
+  }
+
+  .likes__button {
+    left: auto;
+    right: 0;
+  }
+}
