--- a/source/less/blocks/photos.less
+++ b/source/less/blocks/photos.less
@@ -3,14 +3,44 @@
 }
 
 .photos__header {
-  margin-top: 55px;
-  margin-bottom: 55px;
+  margin-top: 44px;
+  margin-bottom: 50px;
 }
 
 .photos__title {
   font-size: 14px;
   font-weight: 400;
   line-height: 30px;
-  color: @bg-darkblue;
+  letter-spacing: 0.4px;
   text-align: center;
+  color: @bg-darkblue;
+}
+
+@media (min-width: @tablet-width) {
+  .photos__wrapper {
+    .wrapper(@tablet-width);
+  }
+
+  .photos__header {
+    width: calc(@tablet-width - 80px);
+    margin-top: 92px;
+    margin-bottom: 78px;
+  }
+
+  .photos__title {
+    font-size: 18px;
+  }
+
+  .photos__list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .photos__wrapper {
+    .wrapper(@desktop-width);
+  }
 }
