--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -7,13 +7,44 @@
   .wrapper(@mobile-width);
 }
 
+.features__wrapper-tablet {
+  padding-bottom: 280px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    background-image: url('../img/iphone-screen-mobile@1x.png');
+    .background(50%, calc(100% + 42px), auto);
+  }
+}
+
 .features__content {
+  position: relative;
+
   .list-reset();
   padding-top: 73px;
 
   background-color: @bg-gray;
-  background-image: url("../img/bg-triangle-white.svg");
-  .background(0%, 0%, contain);
+
+  &::before {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    background-image: url("../img/bg-triangle-white.svg");
+    .background(0%, 0%, contain);
+  }
 }
 
 .features__list {
@@ -52,10 +83,26 @@
 
   .features__wrapper-tablet {
     .wrapper(@tablet-width);
+    z-index: 1;
 
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    padding-bottom: 0;
+
+    &::after {
+      content: "";
+      position: absolute;
+      display: block;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+
+      background-image: url('../img/iphone-screen-3-tablet@1x.png');
+      .background(20px, 15px, 268px auto);
+    }
   }
 
   .features__content {
@@ -86,9 +133,11 @@
 
   .features__list {
     flex-basis: 50%;
-    padding-top: 75px;
+    padding-top: 65px;
+    padding-bottom: 5px;
     order: 2;
     margin: 0;
+    margin-left: auto;
   }
 }
 
@@ -103,10 +152,10 @@
 
   .features__wrapper-tablet {
     .wrapper(@desktop-width);
-  }
 
-  .features__main-picture {
-    display: none;
+    &::after {
+      background-image: none;
+    }
   }
 
   .features__title {
@@ -118,5 +167,14 @@
     & + & {
       width: 60%;
     }
+  }
+
+  .features__list {
+    flex-basis: 100%;
+    margin: 0;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
