--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -51,8 +51,8 @@
 
   .footer__social {
     width: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 
   .footer__developper {
@@ -70,8 +70,8 @@
   .footer__wrapper {
     .wrapper(@desktop-width, 10px);
 
-    margin-top: 40px;
-    margin-bottom: 50px;
+    padding-top: 40px;
+    padding-bottom: 50px;
   }
 
   .footer__developper {
