--- a/source/less/blocks/page-content.less
+++ b/source/less/blocks/page-content.less
@@ -28,7 +28,7 @@
 @media (min-width: @desktop-width) {
   .page-content__effect {
     background-color: @bg-gray;
-    padding-top: 0;
+    padding-top: 40px;
     padding-bottom: 70px;
   }
 
