--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -34,7 +34,7 @@
 .intro__title {
   width: 100%;
   margin: 0;
-  padding: 5px;
+  padding: 30px 0 0 0;
 
   font-size: 24px;
   font-weight: lighter;
