исправление ошибок Travis

--- a/source/less/blocks/effect.less
+++ b/source/less/blocks/effect.less
@@ -22,7 +22,7 @@
     width: 238px;
     height: 276px;
 
-    background-image: url('../img/icon-timer.svg');
+    background-image: url("../img/icon-timer.svg");
     .background();
   }
 }
