--- a/source/less/blocks/feature.less
+++ b/source/less/blocks/feature.less
@@ -56,16 +56,16 @@
       .background(50%, bottom, 290px auto);
     }
 
-    &--screen-1::before  {
-      background-image: url('../../img/iphone-screen-1-desktop@1x.png');
+    &--screen-1::before {
+      background-image: url("../img/iphone-screen-1-desktop@1x.png");
     }
 
-    &--screen-2::before  {
-      background-image: url('../../img/iphone-screen-2-desktop@1x.png');
+    &--screen-2::before {
+      background-image: url("../img/iphone-screen-2-desktop@1x.png");
     }
 
-    &--screen-3::before  {
-      background-image: url('../../img/iphone-screen-3-desktop@1x.png');
+    &--screen-3::before {
+      background-image: url("../img/iphone-screen-3-desktop@1x.png");
     }
   }
 
