--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -19,7 +19,7 @@
     width: 100%;
     height: 100%;
 
-    background-image: url('../img/iphone-screen-mobile@1x.png');
+    background-image: url("../img/iphone-screen-mobile@1x.png");
     .background(50%, calc(100% + 42px), auto);
   }
 }
@@ -100,7 +100,7 @@
       width: 100%;
       height: 100%;
 
-      background-image: url('../img/iphone-screen-3-tablet@1x.png');
+      background-image: url("../img/iphone-screen-3-tablet@1x.png");
       .background(20px, 15px, 268px auto);
     }
   }
