--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -37,7 +37,7 @@
 }
 
 .page-header__logo {
-  padding: 20px 20px 16px 0px;
+  padding: 20px 20px 16px 0;
   .link-reset();
 }
 
@@ -59,7 +59,7 @@
   }
 
   .page-header__logo {
-    padding: 28px 20px 33px 0px;
+    padding: 28px 20px 33px 0;
   }
 }
 
@@ -86,7 +86,7 @@
   }
 
   .page-header__logo {
-    padding: 28px 20px 33px 0px;
+    padding: 28px 20px 33px 0;
   }
 
   .page-header__hamburger {
