--- a/source/less/blocks/reviews-slider.less
+++ b/source/less/blocks/reviews-slider.less
@@ -89,7 +89,7 @@
       width: 79px;
       height: 63px;
 
-      background-image: url('../img/icon-quotes.svg');
+      background-image: url("../img/icon-quotes.svg");
       .background();
     }
   }
@@ -109,7 +109,7 @@
 
     .button-reset();
 
-    background-image: url('../img/icon-review-arrow-left.svg');
+    background-image: url("../img/icon-review-arrow-left.svg");
     .background(35%, calc(50% + 15px), auto);
   }
 
@@ -124,7 +124,7 @@
 
     .button-reset();
 
-    background-image: url('../img/icon-review-arrow-right.svg');
+    background-image: url("../img/icon-review-arrow-right.svg");
     .background(65%, calc(50% + 15px), auto);
   }
 }
