--- a/source/less/blocks/likes.less
+++ b/source/less/blocks/likes.less
@@ -22,13 +22,12 @@
 
 .likes__counts {
   margin: 0;
-  padding-left: 30px;
+  padding: 10px 0 3px 30px;
 }
 
 @media (min-width: @tablet-width) {
   .likes__counts {
-    padding-left: 0;
-    padding-right: 35px;
+    padding: 0 35px 0 0;
   }
 
   .likes__button {
