--- a/source/less/blocks/photo-blog.less
+++ b/source/less/blocks/photo-blog.less
@@ -1,12 +1,16 @@
 .photo-blog {
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .photo-blog__link {
   position: relative;
   display: block;
   width: 100%;
+  max-width: 1200px;
   min-height: 137px;
+  margin: 0 auto;
   overflow: hidden;
 }
 
@@ -40,6 +44,7 @@
 }
 
 .photo-blog__content {
+  min-height: 120px;
   padding: 16px 16px 18px 16px;
   background-color: @bg-gray;
 }
@@ -62,15 +67,22 @@
 }
 
 .photo-blog__likes {
-  margin-top: 12px;
+  align-self: flex-end;
 }
 
 @media (min-width: @tablet-width) {
   .photo-blog {
     width: 300px;
 
+    margin-right: 20px;
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+
     &--special {
       width: 100%;
+      margin-right: 0;
     }
   }
 
@@ -78,13 +90,36 @@
     .wrapper(@tablet-width);
   }
 
+  .photo-blog__of-day {
+    top: 55px;
+  }
+
+  .photo-blog__author {
+    flex-basis: 100%;
+  }
+
   .photo-blog__content {
-    padding: 22px 26px 25px 26px;
+    padding: 23px 26px 25px 26px;
+    flex-grow: 1;
 
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     align-items: stretch;
     justify-content: space-between;
+  }
+
+  .photo-blog--special .photo-blog__content {
+    margin-bottom: 30px;
+    flex-direction: row;
+  }
+
+  .photo-blog__image {
+    height: 300px;
+  }
+
+  .photo-blog--special .photo-blog__image {
+    min-height: 506px;
   }
 
   .photo-blog:not(.photo-blog--special) .photo-blog__likes {
@@ -92,10 +127,57 @@
     margin-top: 2px;
   }
 
+  .photo-blog:not(.photo-blog--special) .photo-blog__comment {
+    min-height: 55px;
+  }
+
   .photo-blog--special .photo-blog__comment {
     order: 3;
     flex-basis: 100%;
 
     letter-spacing: 0.3px;
+  }
+
+  .photo-blog--special .photo-blog__likes {
+    align-self: flex-start;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .photo-blog__link {
+    width: 100%;
+    max-width: 1200px;
+  }
+
+  .photo-blog__wrapper {
+    .wrapper(@desktop-width, 10px);
+  }
+
+  .photo-blog {
+    margin: 20px 20px 35px 0;
+
+    &:nth-child(2n) {
+      margin-right: 20px;
+    }
+
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+
+    &--special {
+      margin: 0 0 0 0;
+    }
+  }
+
+  .photo-blog__image {
+    height: 400px;
+  }
+
+  .photo-blog__of-day {
+    right: 130px;
+  }
+
+  .photo-blog--special .photo-blog__content {
+    min-height: auto;
   }
 }
