--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -57,7 +57,7 @@
 
   .footer__developper {
     width: auto;
-    padding-right: 26px;
+    padding: 14px 14px 1px 18px;
 
     font-size: 14px;
     line-height: 18px;
