--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -35,3 +35,9 @@
     background-image: url("../img/icon-youtube.svg");
   }
 }
+
+@media (min-width: @tablet-width) {
+  .social {
+    padding-top: 15px;
+  }
+}
