--- a/source/less/general.less
+++ b/source/less/general.less
@@ -53,7 +53,7 @@ img {
   max-width: 100%;
 }
 
-.visually-hidden:not(:focus):not(:active) {
+.visually-hidden {
   position: absolute;
 
   width: 1px;
