исправление ошибок Travis

--- a/source/less/blocks/contest.less
+++ b/source/less/blocks/contest.less
@@ -23,7 +23,7 @@
 .contest__contact,
 .contest__apps,
 .contest__comment {
-  min-width: 0px;
+  min-width: 0;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -168,7 +168,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
   }
 
   .contest__title {
@@ -244,6 +243,5 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
   }
 }
