--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -70,7 +70,7 @@
   .footer__wrapper {
     .wrapper(@desktop-width, 0);
 
-    padding: 0px 0 50px 10px;
+    padding: 0 0 50px 10px;
   }
 
   .footer__developper {
