--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -212,11 +212,11 @@
     }
 
     &--phone::after {
-      background-image: url('../img/icon-phone.svg');
+      background-image: url("../img/icon-phone.svg");
     }
 
     &--email::after {
-      background-image: url('../img/icon-mail.svg');
+      background-image: url("../img/icon-mail.svg");
     }
   }
 
@@ -230,12 +230,12 @@
     }
   }
 
-  .form__text-field --contact {
+  .form__text-field--contact {
     letter-spacing: 0.7px;
   }
 
   .form__legend {
-    padding: 0px 20px 0px 20px;
+    padding: 0 20px 0 20px;
     margin: 0 auto;
 
     background-color: white;
@@ -278,7 +278,7 @@
   }
 
   .form__textarea {
-    padding: 15px 0px 0px 15px;
+    padding: 15px 0 0 15px;
     margin-bottom: 35px;
 
     min-height: 192px;
