Исправление багов в IE

--- a/source/less/blocks/feature.less
+++ b/source/less/blocks/feature.less
@@ -36,11 +36,14 @@
     position: relative;
 
     flex-basis: 280px;
+    max-width: 280px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     text-align: center;
     padding: 295px 20px 0 20px;
+
+    box-sizing: border-box;
 
     &::before {
       content: "";
