--- a/source/less/blocks/reviews-slider.less
+++ b/source/less/blocks/reviews-slider.less
@@ -14,6 +14,7 @@
   flex-basis: 100%;
   flex-shrink: 0;
 
+  max-width: 100%;
   margin-bottom: 20px;
 }
 
@@ -73,12 +74,8 @@
 
 @media (min-width: @desktop-width) {
   .reviews-slider {
-    margin-bottom: 0;
-  }
-
-  .reviews-slider__list {
     position: relative;
-    padding-top: 150px;
+    margin-bottom: 0;
 
     &::before {
       content: "";
@@ -92,6 +89,10 @@
       background-image: url("../img/icon-quotes.svg");
       .background();
     }
+  }
+
+  .reviews-slider__list {
+    padding-top: 150px;
   }
 
   .reviews-slider__toggles {
