Исправление багов в IE

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -66,7 +66,7 @@
 .form__check:checked + .form__checkbox::after {
   content: "";
   position: absolute;
-  top: calc(50% - 6px);
+  top: 20px;
   left: 8px;
 
   width: 20px;
@@ -101,7 +101,7 @@
 .form__check:checked + .form__radio::after {
   content: "";
   position: absolute;
-  top: calc(50% - 6.5px);
+  top: 18px;
   left: 11.5px;
 
   width: 13px;
@@ -273,7 +273,7 @@
   }
 
   .form__check:checked + .form__checkbox::after {
-    top: calc(50% - 8px);
+    top: 18px;
     left: 10px;
   }
 
